--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tw-elements": "^1.1.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.2",
