--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.2",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
